# djroid

./: .gitignore  README.md  pyproject.toml  setup.py
djroid/: config.py  logging.py
djroid/cli/: __init__.py  cli.py  crate_service.py
djroid/cli/services/: crate_service.py
djroid/db/: __init__.py  session.py
djroid/db/dao/: artist_dao.py  base_dao.py  song_dao.py
djroid/db/models/: __init__.py  artist.py  associations.py  playlist.py  song.py  tag.py
djroid/ingestors/: __init__.py  song_ingestor.py
djroid/utils/: __init__.py  helpers.py
