[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djroid"
version = "0.1.0"
description = "A DJ's music library management tool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "mutagen",
    "click",
]

[project.scripts]
djroid = "djroid.cli:cli"
dj = "djroid.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["djroid"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true 